# sdlc-agent-swarms

./: .agentforge-dashboard-prefs.json  .agentforge-dashboard-prefs.json.bak  .gitignore  .nxignore  AGENTS.md  CLAUDE.md  README.md  agentforge.yaml  claude-sp.md  docker-compose.yml  eslint.config.mjs  mkdocs.yml  nx.json  package-lock.json  package.json  playwright.config.ts  skills-lock.json  tsconfig.base.json  tsconfig.json
.claude/: settings.json
agentforge/: agents.yaml
backstage/: app-config.yaml
bookmarksapp/: agentforge.tasks.yaml  agentforge.yaml  tailwind.config.ts
cafe-spot/: agentforge.yaml  package.json  tailwind.config.ts
claim-filling/: .eslintrc.json  agentforge.tasks.yaml  agentforge.yaml  package.json  tailwind.config.ts  tsconfig.json
docker/: docker-compose.agentforge.yml  docker-compose.langfuse.yml
docs/: PRD-v2.md  PRD-v3.md  README.md  agent-contracts.md  architecture.md  claude-code-migration.md  codebase-context-brief.md  component-catalog.md  (+26 more)
services/engine/: pyproject.toml
services/engine/src/agentforge_engine/: __init__.py  concurrency.py  config.py  event_bridge.py  models.py  server.py  task_resolver.py
services/engine/src/agentforge_engine/graphs/: __init__.py  cicd_phase.py  code_gen_phase.py  common.py  design_phase.py  observe_phase.py  spec_phase.py
services/engine/tests/: conftest.py  test_cicd_phase.py  test_code_gen_phase.py  test_concurrency.py  test_design_phase.py  test_event_bridge.py  test_models.py  test_observe_phase.py  test_orchestrator.py  test_server.py  test_spec_phase.py  test_task_resolver.py
(+803 files in other folders)
