[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "agentforge-engine"
version = "0.1.0"
description = "Python/LangGraph orchestration engine for AgentForge SDLC phases"
authors = ["AgentForge Contributors"]
license = "Apache-2.0"
packages = [{ include = "agentforge_engine", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
langgraph = ">=0.2"
langchain-core = ">=0.2"
fastapi = ">=0.110"
uvicorn = ">=0.27"
pydantic = ">=2.0"
pyyaml = ">=6.0"
"ruamel.yaml" = ">=0.18"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"
httpx = ">=0.27"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
